--- a/public/test.html
+++ b/public/test.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div id="message">
-      <h2>KHET DAY</h2>
+      <h2>KHET DAY 21312</h2>
     </div>
   </body>
 </html>
